secion servicio, galeria ok

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                     <img src="img/logo.svg" alt="logo" class="logo">
                 </a>
                 <nav>
-                    <a href="#inicio">
+                    <a href="#inicio"class="menu">
                         Inicio
                     </a>
-                    <a href="#nosotros">
+                    <a href="#nosotros"class="menu">
                         Nosotros
                     </a>
-                    <a href="#servicios">
+                    <a href="#servicios"class="menu">
                         Servicios
                     </a>
-                    <a href="#galeria">
+                    <a href="#galeria"class="menu">
                         Galeria
                     </a>
-                    <a href="#contactenos">
+                    <a href="#contactenos"class="menu">
                         Contactenos
                     </a>
                 </nav>
@@ -76,7 +76,7 @@
                     <div class="row">
                         <div class="columna columna-33">
                             <div class="bloque-servicio">
-                                <div class="bloque_img_servicio">
+                                <div class="bloque_img_servicio cuadrado_perfecto">
                                     <img src="img/servicio1.jpg"
                                         alt="Coca-Cola® 1,5 lts">
                                 </div>
@@ -87,13 +87,13 @@
                                         neque quibusdam, nesciunt nemo inventore
                                         exercitationem, iure nulla saepe ipsam
                                         molestias sequi impedit?</p>
-                                        <a href="#">Ver Mas...</a>
+                                        <a href="#"class="boton boton-blanco">Ver Mas...</a>
                                 </div>
                             </div>
                         </div>
                         <div class="columna columna-33">
                             <div class="bloque-servicio">
-                                <div class="bloque_img_servicio">
+                                <div class="bloque_img_servicio cuadrado_perfecto">
                                     <img src="img/servicio2.jpg"
                                         alt="camion Coca-Cola®">
                                 </div>
@@ -104,12 +104,13 @@
                                         neque quibusdam, nesciunt nemo inventore
                                         exercitationem, iure nulla saepe ipsam
                                         molestias sequi impedit?</p>
+                                        <a href="#"class="boton boton-blanco">Ver Mas...</a>
                                 </div>
                             </div>
                         </div>
                         <div class="columna columna-33">
                             <div class="bloque-servicio">
-                                <div class="bloque_img_servicio">
+                                <div class="bloque_img_servicio cuadrado_perfecto">
                                     <img src="img/servicio3.jpg"
                                         alt="lata Coca-Cola®">
                                 </div>
@@ -120,6 +121,7 @@
                                         neque quibusdam, nesciunt nemo inventore
                                         exercitationem, iure nulla saepe ipsam
                                         molestias sequi impedit?</p>
+                                        <a href="#"class="boton boton-blanco">Ver Mas...</a>
                                 </div>
                             </div>
                         </div>
