para web completo falta funciones y vista mobiles

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                     <img src="img/logo.svg" alt="logo" class="logo">
                 </a>
                 <nav>
-                    <a href="#inicio"class="menu">
+                    <a href="#inicio" class="menu">
                         Inicio
                     </a>
-                    <a href="#nosotros"class="menu">
+                    <a href="#nosotros" class="menu">
                         Nosotros
                     </a>
-                    <a href="#servicios"class="menu">
+                    <a href="#servicios" class="menu">
                         Servicios
                     </a>
-                    <a href="#galeria"class="menu">
+                    <a href="#galeria" class="menu">
                         Galeria
                     </a>
-                    <a href="#contactenos"class="menu">
+                    <a href="#contactenos" class="menu">
                         Contactenos
                     </a>
                 </nav>
@@ -45,129 +45,157 @@
         </header>
 
         <main>
+
             <section id="inicio">
                 <img src="img/bannerprincipal.jpg" alt="vaso con hielos"
                     id="banner">
                 <div class="bloque_inicio">
                     <h1>Bienvenidos a Coca-Cola®</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit.
+                    <p style="font-size: larger;">
+                        "Disfruta el sabor de la vida con Coca-Cola."
                     </p>
                     <a href="#nosotros" class="boton boton_rojo">Ver más</a>
                 </div>
             </section>
+
             <section id="nosotros" class="seccion">
                 <div class="container">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                        Quo atque tempora asperiores at doloribus sequi porro
-                        cum
-                        harum aspernatur expedita delectus officiis officia
-                        minima
-                        laboriosam, nam vero quibusdam molestiae vel libero quis
-                        dolorem ducimus aliquam modi magnam. Aspernatur, non
-                        unde
-                        asperiores itaque fugiat, sit ex impedit accusantium
-                        voluptas corporis libero!</p>
+                    <p>
+                        Coca-Cola Company es una multinacional líder en la
+                        industria de bebidas, reconocida por su amplia gama de
+                        productos refrescantes que incluyen Coca-Cola, Sprite,
+                        Fanta y otras marcas populares. Fundada en 1886 en
+                        Atlanta, Estados Unidos, la compañía ha crecido hasta
+                        convertirse en un ícono global, presente en más de 200
+                        países. Su éxito se basa en la calidad de sus productos,
+                        la innovación constante, y su compromiso con la
+                        responsabilidad social y ambiental. Coca-Cola se ha
+                        convertido en un símbolo de cultura y felicidad en todo
+                        el mundo, manteniendo su posición como una de las marcas
+                        más reconocidas y admiradas a nivel internacional.</p>
                 </div>
-
             </section>
+
             <section id="servicios" class="seccion">
                 <div class="container">
                     <div class="row">
                         <div class="columna columna-33">
                             <div class="bloque-servicio">
-                                <div class="bloque_img_servicio cuadrado_perfecto">
+                                <div
+                                    class="bloque_img_servicio cuadrado_perfecto">
                                     <img src="img/servicio1.jpg"
                                         alt="Coca-Cola® 1,5 lts">
                                 </div>
                                 <div class="bloque_contenido_servicio">
-                                    <h3>Servicio 1</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur
-                                        adipisicing elit. Rem rerum hic quaerat
-                                        neque quibusdam, nesciunt nemo inventore
-                                        exercitationem, iure nulla saepe ipsam
-                                        molestias sequi impedit?</p>
-                                        <a href="#"class="boton boton-blanco">Ver Mas...</a>
+                                    <h3>Servicio Embotellamiento</h3>
+                                    <p>El servicio de embotellamiento de
+                                        empresas como Coca-Cola implica la
+                                        producción, envasado y distribución de
+                                        bebidas refrescantes en diversas
+                                        presentaciones. Este proceso garantiza
+                                        la calidad, seguridad alimentaria y
+                                        satisfacción del cliente mediante
+                                        productos frescos y sabrosos disponibles
+                                        a nivel nacional e internacional.</p>
+                                    <a href="embotellamiento.html"
+                                        class="boton boton-blanco">Ver
+                                        Mas...</a>
                                 </div>
                             </div>
                         </div>
                         <div class="columna columna-33">
                             <div class="bloque-servicio">
-                                <div class="bloque_img_servicio cuadrado_perfecto">
+                                <div
+                                    class="bloque_img_servicio cuadrado_perfecto">
                                     <img src="img/servicio2.jpg"
                                         alt="camion Coca-Cola®">
                                 </div>
                                 <div class="bloque_contenido_servicio">
-                                    <h3>Servicio 2</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur
-                                        adipisicing elit. Rem rerum hic quaerat
-                                        neque quibusdam, nesciunt nemo inventore
-                                        exercitationem, iure nulla saepe ipsam
-                                        molestias sequi impedit?</p>
-                                        <a href="#"class="boton boton-blanco">Ver Mas...</a>
+                                    <h3>Servicio Transporte</h3>
+                                    <p>El servicio de transporte de bebidas de
+                                        empresas como Coca-Cola se encarga de la
+                                        distribución eficiente de los productos
+                                        a nivel nacional e internacional.
+                                        Garantiza la entrega oportuna y segura
+                                        de las bebidas, manteniendo altos
+                                        estándares de calidad y satisfacción del
+                                        cliente en cada punto de venta.
+                                    </p>
+                                    <a href="transporte.html"
+                                        class="boton boton-blanco">Ver
+                                        Mas...</a>
                                 </div>
                             </div>
                         </div>
                         <div class="columna columna-33">
                             <div class="bloque-servicio">
-                                <div class="bloque_img_servicio cuadrado_perfecto">
+                                <div
+                                    class="bloque_img_servicio cuadrado_perfecto">
                                     <img src="img/servicio3.jpg"
                                         alt="lata Coca-Cola®">
                                 </div>
                                 <div class="bloque_contenido_servicio">
-                                    <h3>Servicio 3</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur
-                                        adipisicing elit. Rem rerum hic quaerat
-                                        neque quibusdam, nesciunt nemo inventore
-                                        exercitationem, iure nulla saepe ipsam
-                                        molestias sequi impedit?</p>
-                                        <a href="#"class="boton boton-blanco">Ver Mas...</a>
+                                    <h3>Servicio reciclaje</h3>
+                                    <p>
+                                        El servicio de reciclaje de empresas
+                                        como Coca-Cola se encarga de gestionar
+                                        los materiales de sus envases de forma
+                                        responsable, promoviendo la
+                                        sostenibilidad ambiental. A través de
+                                        programas de reciclaje, se recolectan y
+                                        procesan los envases vacíos para su
+                                        reutilización, contribuyendo así a la
+                                        reducción de residuos y al cuidado del
+                                        medio ambiente.</p>
+                                    <a href="reciclaje.html"
+                                        class="boton boton-blanco">Ver
+                                        Mas...</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </section>
+
             <section id="galeria">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="columna-33">
+                        <div class="columna columna-33">
                             <div class="cuadrado_perfecto">
                                 <img src="img/servicio6.jpg"
                                     alt="Coca-Cola® 1,5 lts">
                                 <h4>Imagen 1</h4>
                             </div>
                         </div>
-                        <div class="columna-33">
+                        <div class="columna columna-33">
                             <div class="cuadrado_perfecto">
                                 <img src="img/servicio5.jpg"
                                     alt="lata Coca-Cola®">
                                 <h4>Imagen 2</h4>
                             </div>
                         </div>
-                        <div class="columna-33">
+                        <div class="columna columna-33">
                             <div class="cuadrado_perfecto">
                                 <img src="img/servicio4.jpg"
                                     alt="camion Coca-Cola®">
                                 <h4>Imagen 3</h4>
                             </div>
                         </div>
-                        <div class="columna-33">
+                        <div class="columna columna-33">
                             <div class="cuadrado_perfecto">
                                 <img src="img/servicio6.jpg"
                                     alt="Coca-Cola® 1,5 lts">
                                 <h4>Imagen 4</h4>
                             </div>
                         </div>
-                        <div class="columna-33">
+                        <div class="columna columna-33">
                             <div class="cuadrado_perfecto">
                                 <img src="img/servicio5.jpg"
                                     alt="lata Coca-Cola®">
                                 <h4>Imagen 5</h4>
                             </div>
                         </div>
-                        <div class="columna-33">
+                        <div class="columna columna-33">
                             <div class="cuadrado_perfecto">
                                 <img src="img/servicio4.jpg"
                                     alt="camion Coca-Cola®">
@@ -177,10 +205,13 @@
                     </div>
                 </div>
             </section>
-            <section id="contactenos">
+
+            <section id="contactenos" class="seccion">
+                <iframe width="400" height="300" frameborder="0"
+                    src="https://maps.google.com/maps?width=400&amp;height=300&amp;hl=en&amp;q=%20estaci%C3%B3n%20central+(Chile)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
                 <div class="container">
                     <div class="row">
-                        <div class="columna columna-50">
+                        <div class="columna columna-41 empujar-58">
                             <form action method="post">
                                 <div class="form_block">
                                     <label for="nombre">Nombre: </label>
@@ -197,44 +228,42 @@
                                 <div class="form_block">
                                     <label for="mensaje">Mensaje: </label>
                                     <textarea name="mensaje" id="mensaje"
-                                        cols="30" rows="10"></textarea>
+                                        cols="30" rows="10"
+                                        placeholder="Ingrese su Mensaje"></textarea>
                                 </div>
                                 <div class="form_block">
-                                    <input type="submit" value="Enviar">
+                                    <input type="submit" value="Enviar"
+                                        class="boton-blanco">
                                 </div>
                             </form>
-
                         </div>
                     </div>
                 </div>
-                <iframe width="400" height="300" frameborder="0"
-                    id="gmap_canvas"
-                    src="https://maps.google.com/maps?width=400&amp;height=300&amp;hl=en&amp;q=%20estaci%C3%B3n%20central+(Chile)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
             </section>
         </main>
 
-        <footer>
+        <footer class="seccion">
             <div class="container">
                 <div class="row">
                     <div class="columna_25">
                         <img src="img/logo-blanco.png" class="logo_footer"
                             alt="Coca-Cola® blanco">
-                    </div>
-                    <div class="columna_25">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Ipsa commodi incidunt aut saepe ipsum enim
-                            quisquam provident dolore consectetur obcaecati.</p>
+                        <p>Coca-Cola, líder en bebidas, famosa por sus productos
+                            como Coca-Cola, Sprite y Fanta. Fundada en 1886 en
+                            Atlanta, EEUU, presente en 200+ países. Éxito por
+                            calidad, innovación y compromiso social. Símbolo
+                            global de felicidad, marca reconocida
+                            mundialmente.</p>
                     </div>
                     <div class="columna_25">
                         <h4>Temas Relacionados</h4>
                         <ul>
-                            <li><a href="#">Tema 1</a></li>
-                            <li><a href="#">Tema 2</a></li>
-                            <li><a href="#">Tema 3</a></li>
+                            <li><a
+                                    href="embotellamiento.html">Embotellamiento</a></li>
+                            <li><a href="transporte.html">Trasnporte</a></li>
+                            <li><a href="reciclaje.html">Reciclaje</a></li>
                         </ul>
-
                     </div>
-
                     <div class="columna_25">
                         <h4>Datos de Contacto</h4>
                         <ul>
@@ -245,24 +274,27 @@
                     </div>
                     <div class="columna_25">
                         <h4>Redes Sociales</h4>
-                        <ul>
-                            <li><a href="#">
-                                    <i>
-                                        face
-                                    </i></a></li>
+                        <ul class="redes">
+                            <li><a href="https://www.facebook.com/exowebchile"
+                                    target="_blank">
+                                    <i class="fa-brands fa-square-facebook"></i>
+                                </a>
+                            </li>
                             <li>
-                                <a href="#">
-                                    <i>
-                                        insta
-                                    </i></a></li>
+                                <a
+                                    href="https://www.instagram.com/exoweb_chile/"
+                                    target="_blank">
+                                    <i
+                                        class="fa-brands fa-square-instagram"></i>
+                                </a>
+                            </li>
                             <li>
-                                <a href="#">
-                                    <i>
-                                        twitter
-                                    </i>
-                                </a></li>
+                                <a href="https://github.com/mBrownC"
+                                    target="_blank">
+                                    <i class="fa-brands fa-square-github"></i>
+                                </a>
+                            </li>
                         </ul>
-
                     </div>
                 </div>
             </div>
@@ -270,6 +302,8 @@
                 &copy; Todos los derechos reservados | Diseñado por MBrownC
             </div>
         </footer>
+        <!-- <script src="js/jquery.js"></script>
+        <script src="js/functions.js"></script> -->
     </body>
 
 </html>
