--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             alt="Coca-Cola® blanco">
                         <p>Coca-Cola, líder en bebidas, famosa por sus productos
                             como Coca-Cola, Sprite y Fanta. Fundada en 1886 en
-                            Atlanta, EEUU, presente en 200+ países. Éxito por
+                            Atlanta, EEUU, presente en más 200 países. Éxito por
                             calidad, innovación y compromiso social. Símbolo
                             global de felicidad, marca reconocida
                             mundialmente.</p>
@@ -299,7 +299,7 @@
                 </div>
             </div>
             <div class="barra_foorter">
-                &copy; Todos los derechos reservados | Diseñado por MBrownC
+                &copy; Todos los derechos reservados | Diseñado por MBrownC, Exoweb_chile®
             </div>
         </footer>
         <!-- <script src="js/jquery.js"></script>
