slider embotellamiento ok

--- a/embotellamiento.html
+++ b/embotellamiento.html
@@ -12,12 +12,34 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
             rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/styles.css">
-        <script src="https://kit.fontawesome.com/1ac22e0cde.js"
-            crossorigin="anonymous"></script>
+        <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+        <link rel="stylesheet" href="css/stylesembotellamiento.css">
+        <!-- <script src="https://kit.fontawesome.com/1ac22e0cde.js"
+            crossorigin="anonymous"></script> -->
     </head>
-<body>
-    <h1>Embotellamiento</h1>
-</body>
+    <body>
+        <div class="container">
+            <h1>Embotellamiento Coca Cola ®</h1>
+            <div class="slider">
+                <div class="slide active">
+                    <img src="img/embotellamiento/embotellamiento CC (1).jpeg" alt="img1">
+                </div>
+                <div class="slide">
+                    <img src="img/embotellamiento/embotellamiento CC (1).jpg" alt="img2">
+                </div>
+                <div class="slide">
+                    <img src="img/embotellamiento/embotellamiento CC (3).jpg" alt="img3">
+                </div>
+                <div class="slide">
+                    <img src="img/embotellamiento/embotellamiento CC (4).jpg" alt="img3">
+                </div>
+                <div class="slide">
+                    <img src="img/embotellamiento/embotellamiento CC (5).jpg" alt="img3">
+                </div>
+
+            </div>
+            <a href="index.html" class="boton_rojo">Volver</a>
+        </div>
+        <script src="js/slider.js"></script>
+    </body>
 </html>
