--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@
                     <div class="columna_25">
                         <h4>Temas Relacionados</h4>
                         <ul>
-                            <li><a
-                                    href="embotellamiento.html">Embotellamiento</a></li>
+                            <li><a href="embotellamiento.html">Embotellamiento</a></li>
                             <li><a href="transporte.html">Trasnporte</a></li>
                             <li><a href="reciclaje.html">Reciclaje</a></li>
                         </ul>
