cambios minimos de sombras

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <body>
         <header>
+            <!-- Menu superior -->
             <div class="container">
                 <a href="index.html">
                     <img src="img/logo.svg" alt="logo" class="logo">
