--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             content="Explora la historia de Coca-Cola®, sus productos y el sabor que marca momentos inolvidables. ¡Refresca tus momentos con nosotros!">
         <meta name="keywords"
             content="Coca-Cola, refrescos, bebidas, historia, sabor único, momentos refrescantes, productos icónicos">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Coca Cola ®</title>
         <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
         <link
@@ -14,6 +15,7 @@
             rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
+        <!-- <link rel="stylesheet" href="css/media_querys.css"> -->
         <script src="https://kit.fontawesome.com/1ac22e0cde.js"
             crossorigin="anonymous"></script>
     </head>
@@ -249,10 +251,8 @@
                     <div class="columna_25">
                         <img src="img/logo-blanco.png" class="logo_footer"
                             alt="Coca-Cola® blanco">
-                        <p>Coca-Cola, líder en bebidas, famosa por sus productos
-                            como Coca-Cola, Sprite y Fanta. Fundada en 1886 en
-                            Atlanta, EEUU, presente en más 200 países. Éxito por
-                            calidad, innovación y compromiso social. Símbolo
+                        <p>Coca-Cola®, famosa por sus productos
+                            como Coca-Cola, Sprite y Fanta. Fundada en 1886, presente en más 200 países. Símbolo
                             global de felicidad, marca reconocida
                             mundialmente.</p>
                     </div>
@@ -260,7 +260,7 @@
                         <h4>Temas Relacionados</h4>
                         <ul>
                             <li><a href="embotellamiento.html">Embotellamiento</a></li>
-                            <li><a href="transporte.html">Trasnporte</a></li>
+                            <li><a href="transporte.html">Transporte</a></li>
                             <li><a href="reciclaje.html">Reciclaje</a></li>
                         </ul>
                     </div>
