--- a/reciclaje.html
+++ b/reciclaje.html
@@ -13,11 +13,47 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
             rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles-transporte.css">
         <script src="https://kit.fontawesome.com/1ac22e0cde.js"
             crossorigin="anonymous"></script>
     </head>
 <body>
     <h1>Reciclaje</h1>
+
+    <div class="content-all">
+        <div class="content-carrusel">
+            <figure>
+                <img src="img/reciclaje/img1.jpg">
+            </figure>
+            <figure>
+                <img src="img/reciclaje/img2.jpg">
+            </figure>
+            <figure>
+                <img src="img/reciclaje/img3.jpg">
+            </figure>
+            <figure>
+                <img src="img/reciclaje/img4.jpg">
+            </figure>
+            <figure>
+                <img src="img/reciclaje/img5.jpg">
+            </figure>
+            <figure>
+                <img src="img/reciclaje/img6.jpg">
+            </figure>
+            <figure>
+                <img src="img/reciclaje/img7.jpg">
+            </figure>
+            <figure>
+                <img src="img/reciclaje/img8.jpg">
+            </figure>
+            <figure>
+                <img src="img/reciclaje/img9.jpg">
+            </figure>
+            <figure>
+                <img src="img/reciclaje/img10.jpg">
+            </figure>
+        </div>
+    </div>
+
 </body>
 </html>
