--- a/transporte.html
+++ b/transporte.html
@@ -2,9 +2,12 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Slide</title>
+        <meta name="description"
+            content="Explora la historia de Coca-Cola®, sus productos y el sabor que marca momentos inolvidables. ¡Refresca tus momentos con nosotros!">
+        <meta name="keywords"
+            content="Coca-Cola, refrescos, bebidas, historia, sabor único, momentos refrescantes, productos icónicos">
+        <title>Transporte Coca Cola ®</title>
+        <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
